--- a/jogo-adivinhacao.html
+++ b/jogo-adivinhacao.html
@@ -1,75 +1,111 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo de adivinhação</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Jogo Adivinhação</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-        body {
-            background-color: #A79F9F;
-        }
+    :root {
+      font-size: 62.5%;
+    }
 
-        .container {
-            background-color: white;
-            width: 400px;
-            height: 400px;
-            border-radius: 8px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-around;
-            gap: -20px;
-        }
+    body {
+      background: linear-gradient(287.56deg, #c2e9fb 0%, #a1c4fd 100%);
+      font-size: 1.6rem;
+      display: grid;
+      place-items: center;
+      height: 100vh;
+    }
 
-        .head {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 8px;
-        }
+    body,
+    button,
+    input {
+      font-family: 'DM Sans', sans-serif;
+    }
 
-        .botao-valor {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-        }
+    main {
+      background: #ffffff;
+      box-shadow: 0px 0.2rem 0.4rem rgba(0, 0, 0, 0.1);
+      border-radius: 0.6rem;
+      padding: 4.8rem 6.4rem 6.4rem;
 
-        .valor {
-            font-size: 1.8rem;
-            width: 80px;
-            height: 40px;
-            background-color: #A79F9F;
-            text-align: center;
-            border-radius: 8px 0px 0px 8px ;
-        }
-    </style>
+      width: min(42.8rem, 90%);
+      margin-top: -12rem;
+
+      text-align: center;
+    }
+
+    h1 {
+      font-family: 'Montserrat', sans-serif;
+      font-size: 2.4rem;
+      margin-bottom: 1.6rem;
+    }
+
+    h1,
+    p {
+      color: #34355b;
+    }
+
+    p {
+      opacity: 0.8;
+    }
+
+    form {
+      margin-top: 4.8rem;
+      display: flex;
+      justify-content: center;
+    }
+
+    input,
+    button {
+      border: none;
+      padding: 1.6rem;
+    }
+
+    input {
+      background-color: #dce2e9;
+      width: 5rem;
+      border-radius: .4rem 0 0 .4rem;
+    }
+
+    button {
+      background-color: #7879f1;
+      color: #ffffff;
+      font-weight: bold;
+      border-radius: 0 .4rem .4rem 0;
+    }
+  </style>
 </head>
 
 <body>
-    <div class="container">
-        <div class="head">
-            <h1>
-                Jogo da adivinhação
-            </h1>
-            <p>
-                Adivinhe um número entre 0 e 10
-            </p>
-        </div>
-        <div class="botao-valor">
-            <p class="valor">
-                0
-            </p>
-            <button class="botao" onclick="adivinhar()">Tentar</button>
-        </div>
-    </div>
+  <main>
+    <h1>Jogo de adivinhação</h1>
+    <p>
+      Adivinhe um número entre 0 e 10
+    </p>
+    <form>
+      <input type="text">
+      <button>
+        Tentar
+      </button>
+    </form>
+  </main>
 </body>
 
 </html>
